[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-names = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
[dependencies]
anchor-lang = "0.32.0" # или ваша версия

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(custom_heap)',
    'cfg(custom_panic)',
    'cfg(anchor_debug)',
    'cfg(no_log_ix_name)',
] }
